Corrected several CSS rules to preparation for desktop alignment.

--- a/src/frontend/scss/styles.scss
+++ b/src/frontend/scss/styles.scss
@@ -42,11 +42,6 @@ html, body {
     right: 10px;
 }
 
-.config-button-container {
-    position: absolute;
-    right: 10px;
-}
-
 .btn-lg {
     width: 48px;
     height: 48px;
@@ -59,8 +54,6 @@ html, body {
 }
 
 #optionsMenuBtn {
-    position: absolute;
-    right: 10px;
     z-index: 2;
 }
 
